# ws-log-analyzer

./: .gitignore  ARCHITECTURE.md  AUDIT_REPORT.md  CLAUDE.md  README.md  app.py  pyproject.toml  report_renderer.py  wslog.py
.claude/skills/: claude-integration.md  streamlit-patterns.md  testing.md  ws-log-parsing.yaml
scripts/: compare_audits.py  run_audit.py
skills/: deployment-analysis.md  liberty-analysis.md  log-noise-filter.md  message-codes.md  security-analysis.md  servlet-errors.md  splunk-query.md  stacktrace-analysis.md  thread-correlation.md  websphere-startup.md
tests/: test_app_e2e.py  test_wslog.py
