[project]
name = "ws-log-analyzer"
version = "0.1.0"
description = "WebSphere/Java log analyzer for quick triage"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
claude = ["anthropic>=0.40"]
gui = ["streamlit>=1.30"]
test = ["pytest>=7"]

[project.scripts]
wslog = "wslog:main"
